[package]
name = "qiniu-uploader"
version = "0.1.0"
edition = "2021"
description = "Qiniu upload lib with progress bar"
authors = ["linghaihui <haihuiling2014@gmail.com"]
license = "MIT"
repository = "https://github.com/bujnlc8/qiniu-uploader"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
futures-util = "0.3.30"
hmac-sha1 = "0.2.2"
indicatif = "0.17.8"
mime = "0.3.17"
reqwest = {version = "0.12.5", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
