[package]
name = "qiniu-uploader"
version = "0.1.10"
edition = "2021"
description = "Qiniu upload lib with progress bar"
authors = ["linghaihui <75124771@qq.com>"]
license = "MIT"
repository = "https://github.com/bujnlc8/qiniu-uploader"
keywords = ["qiniu", "qiniu-upload", "progress-bar", "indicatif"]
exclude = ["snapshot.png", ".github", "Cargo.lock"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
hmac-sha1 = "0.2.2"
mime = "0.3.17"
reqwest = {version = "0.12.5", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", default-features = false}
tokio-util = {version = "0.7.11", optional = true}
futures-util = {version = "0.3.30", optional = true}
indicatif = { version = "0.17.8", optional = true }

[dev-dependencies]
tokio = { version = "1.39.2", features=["full"] }
anyhow = "1.0.86"

[features]
default = ["progress-bar"]
progress-bar = ["dep:indicatif", "dep:futures-util", "dep:tokio-util"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
